
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int * tailfree; int * tail; int * head; } ;
struct TYPE_4__ {int query_depth; int * state; scalar_t__ maxquerydepth; int * query_stack; scalar_t__ maxtransdepth; int * trans_stack; TYPE_1__ events; int * event_cxt; } ;


 int MemoryContextDelete (int *) ;
 TYPE_2__ afterTriggers ;

void
AfterTriggerEndXact(bool isCommit)
{
 if (afterTriggers.event_cxt)
 {
  MemoryContextDelete(afterTriggers.event_cxt);
  afterTriggers.event_cxt = ((void*)0);
  afterTriggers.events.head = ((void*)0);
  afterTriggers.events.tail = ((void*)0);
  afterTriggers.events.tailfree = ((void*)0);
 }






 afterTriggers.trans_stack = ((void*)0);
 afterTriggers.maxtransdepth = 0;







 afterTriggers.query_stack = ((void*)0);
 afterTriggers.maxquerydepth = 0;
 afterTriggers.state = ((void*)0);


 afterTriggers.query_depth = -1;
}
